# polygrid

./: ReadMe.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/polygonizer/: __init__.py
src/polygrid/: __init__.py
tests/: cat_license.txt  test_rasterized.py
